Testing/TestCache/test46.txt
Error trace on line: 2, column: 1 in module test46.
55 + id
^
Error trace on line: 2, column: 4 in module test46.
55 + id
   ^
Error trace on line: 126, column: 11 in module Core.
inl (+) a b = !Add(a,b)
          ^
Error trace on line: 126, column: 15 in module Core.
inl (+) a b = !Add(a,b)
              ^
`is_numeric a && type_get a = type_get b` is false.
a=lit 55i64, b=<function>
